# p64-qt

./: .gitignore  CMakeLists.txt  README.md  UIAbstractionLayer.h  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  config_dialog.ui  cover_downloader_dialog.ui  database.sqlite  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Core/: RomInfoProvider.cpp  RomInfoProvider.h
Source/: UIAbstractionLayer.cpp  UIAbstractionLayer.h  main.cpp
Source/Core/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  RomBrowserPopulator.cpp  RomBrowserPopulator.h  RomInfoProvider.cpp  RomInfoProvider.h  RomParser.cpp  RomParser.h  SettingsManager.cpp  SettingsManager.h
Source/Core/Settings/: ApplicationSettings.cpp  ApplicationSettings.h  AudioSettings.cpp  AudioSettings.h  DebugSettings.cpp  DebugSettings.h  EmulationSettings.cpp  EmulationSettings.h  GraphicsSettings.cpp  GraphicsSettings.h  InputSettings.cpp  InputSettings.h  PluginSettings.cpp  PluginSettings.h  RomBrowserSettings.cpp  RomBrowserSettings.h  SaveSettings.cpp  SaveSettings.h  SettingsManager.cpp  SettingsManager.h
Source/UI/: CMakeLists.txt  IconHelper.h  mainwindow.cpp  mainwindow.h
Source/UI/About/: AboutDialog.cpp  AboutDialog.h
Source/UI/Emulation/: EmulationViewport.cpp  EmulationViewport.h
Source/UI/Enhancement/: EnhancementData.h  EnhancementUI.cpp  EnhancementUI.h
Source/UI/Notification/: NotificationSystem.cpp  NotificationSystem.h
Source/UI/Resources/: Project64.rdx  light.qss  resources.qrc
Source/UI/Resources/data/: db_converter.py  make-markdown-table.py  update_product_ids.py
Source/UI/Resources/styles/: dark.qss
Source/UI/RomBrowser/: RomBrowserWidget.cpp  RomBrowserWidget.h  RomListModel.cpp  RomListModel.h
Source/UI/Settings/: BaseSettingsPage.h  ConfigDialog.cpp  ConfigDialog.h  DirectoriesSettingsPage.cpp  DirectoriesSettingsPage.h  GeneralSettingsPage.cpp  GeneralSettingsPage.h  GraphicsSettingsDialog.cpp  GraphicsSettingsDialog.h  RomBrowserSettingsPage.cpp  RomBrowserSettingsPage.h  SettingsDialog.cpp  SettingsPage.h  SettingsPlaceholderWidget.cpp
Source/UI/Theme/: IconHelper.h  IconThemeManager.cpp  ThemeManager.cpp  ThemeManager.h
Source/UI/Tools/: CoverDownloader.cpp  CoverDownloader.h
UI/: IconHelper.h  mainwindow.cpp  mainwindow.h  resources.qrc
UI/About/: AboutDialog.cpp
UI/Notification/: NotificationSystem.cpp  NotificationSystem.h
UI/Resources/data/: Project64.rdx
UI/RomBrowser/: RomBrowserWidget.cpp  RomBrowserWidget.h  RomListModel.cpp  RomListModel.h
UI/Settings/: ConfigDialog.cpp  ConfigDialog.h  SettingsDialog.h  SettingsPage.cpp
UI/Theme/: ThemeManager.cpp  ThemeManager.h
UI/Tools/: CoverDownloader.h
